tests/NormalTests/paczka1/small_fuzzy/50523340.err
Error in line 8: Ff1UgshJub A114 29,7
Error in line 13: GNvvuBX7b A199 -1,1
